@@ -232,12 +232,6 @@ interface ClientProtocol extends VersionedProtocol {
    */
   public boolean delete(String src, boolean recursive) throws IOException;
   
-  /** @deprecated Use getFileInfo() instead
-   * Check whether the given file exists.
-   */
-  @Deprecated
-  public boolean exists(String src) throws IOException;
-
   /**
    * Create a directory (or hierarchy of directories) with the given
    * name and permission.
